--- a/public/css.css
+++ b/public/css.css
@@ -4,7 +4,7 @@
     margin: 10px;
     padding-right: 20px;
     border: 2px;
-    width:fit-content;
+    width: fit-content;
     color: aliceblue;
     position: relative;
     height: 100px;
@@ -12,6 +12,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.quality{
+    margin: 20px;
 }
 
 /*
